--- a/.gitignore
+++ b/.gitignore
@@ -183,3 +183,9 @@ cython_debug/
 **/blocked_multiplication
 **/blocked_omp_multiplication_optimised
 **/blocked_omp_multiplication
+**/blas_multiplication
+
+**/cublas
+**/naive
+**/shared
+
